fixing list overflow issues.

--- a/apps/mobile/src/app.scss
+++ b/apps/mobile/src/app.scss
@@ -83,12 +83,12 @@ ActionBar {
     color: $lightPurple;
     opacity: 0.8;
   }
-  .album-art Image {
+  .album-art image {
     border-radius: 4;
     /* margin-top: 20;
 	margin-bottom: 30; */
   }
-  Progress {
+  progress {
     background-color: $accentsLight;
     color: $lightPurple;
     width: 67%;
@@ -123,7 +123,7 @@ ActionBar {
     color: $lightGrey;
   }
 
-  .player-controls Label {
+  .player-controls label {
     text-align: center;
     height: 66;
     color: $primaryColor;
@@ -262,7 +262,7 @@ ActionBar {
     font-size: 13px;
   }
 
-  .letter-wrap Label {
+  .letter-wrap label {
     height: 14;
     font-weight: bold;
     color: $darkPurple;
@@ -332,8 +332,8 @@ ActionBar {
   .header-list-item {
     margin-bottom: 10;
   }
-  .button-wrap Button,
-  .button-wrap Label {
+  .button-wrap button,
+  .button-wrap label {
     width: 49%;
     padding-top: 15;
     padding-right: 15;
@@ -343,7 +343,7 @@ ActionBar {
     font-size: 14;
     text-align: center;
   }
-  .button-wrap Button:highlighted {
+  .button-wrap button:highlighted {
     background-color: $lightPurple;
     color: $backgroundColor;
     font-weight: bold;
@@ -367,6 +367,9 @@ ActionBar {
 // playlist
 
 .playlist-wrap {
+  border-color: $backgroundColor;
+  border-width: 1;
+
   .playlist {
     height: 100%;
   }
@@ -393,7 +396,7 @@ ActionBar {
     font-size: 13px;
   }
 
-  .letter-wrap Label {
+  .letter-wrap label {
     height: 14;
     font-weight: bold;
     color: $darkPurple;
@@ -404,15 +407,15 @@ ActionBar {
     text-align: center;
     color: $lightPurple;
   }
-  .button-wrap Button,
-  .button-wrap Label {
+  .button-wrap button,
+  .button-wrap label {
     width: 49%;
     padding: 15;
     color: $accentsDark;
     font-size: 14;
     text-align: center;
   }
-  .button-wrap Button:highlighted {
+  .button-wrap button:highlighted {
     background-color: $lightPurple;
     color: $backgroundColor;
     font-weight: bold;
@@ -456,6 +459,9 @@ ActionBar {
 
 // playlists
 .playlists-wrap {
+  border-color: $backgroundColor;
+  border-width: 1;
+
   .playlist-list-item {
     padding-top: 15;
     padding-bottom: 15;
@@ -474,7 +480,7 @@ ActionBar {
     font-size: 13px;
   }
 
-  .letter-wrap Label {
+  .letter-wrap label {
     height: 14;
     font-weight: bold;
     color: $lightPurple;
@@ -521,6 +527,10 @@ ActionBar {
 }
 
 .recently-added-wrap {
+  background-color: $backgroundColor;
+  border-color: $backgroundColor;
+  border-width: 1;
+
   ActivityIndicator {
     margin-top: 45%;
   }
@@ -564,7 +574,7 @@ ActionBar {
     font-size: 13px;
   }
 
-  .letter-wrap Label {
+  .letter-wrap label {
     height: 16;
     font-weight: bold;
     color: $lightPurple;
@@ -573,10 +583,10 @@ ActionBar {
   }
 }
 
-Image {
+image {
   border-radius: 2;
 }
-Button {
+button {
   color: $lightPurple;
 }
 
@@ -591,7 +601,10 @@ Button {
 .border-outline {
   border-width: 0;
 }
-
+.overflow-fix {
+  border-color: red;
+  border-width: 1;
+}
 .debug {
   border-color: red;
   border-width: 1;
@@ -669,8 +682,8 @@ Button {
 .header-list-item {
   margin-bottom: 10;
 }
-.button-wrap Button,
-.button-wrap Label {
+.button-wrap button,
+.button-wrap label {
   width: 49%;
   padding-top: 15;
   padding-right: 15;
